[project]
name = "verity471"
version = "1.0.0"
description = "Verity471 Unified API"
authors = [
  { name = "Intel 471 Inc.", email = "integrations@intel471.com" }
]
license = { text = "MIT" }
readme = "README.md"
keywords = ["intel471", "verity471", "cti", "threat-intelligence", "api-client"]

requires-python = ">=3.10"

classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14"
]

dependencies = [
  "urllib3>=2.1.0,<3.0.0",
  "python-dateutil>=2.8.2",
  "pydantic>=2",
  "typing-extensions>=4.7.1",
  "lazy-imports>=1,<2",
]

[project.optional-dependencies]
stix = [
  "PyYAML>=6.0.2",
  "stix2>=3.0.1,<4",
  "pycti>=6.9.13",
]

test = [
  "pytest>=7.2.1",
  "pytest-cov>=2.8.1",
  "mock>=5.2.0",
]


[project.urls]
Repository = "https://github.com/intel471/verity471-python"


[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
