[project]
name = "verity471"
version = "1.1.1"
description = "Official Python SDK for the Verity471 API. Features query validation, instantiated object models, and native STIX mapping"
authors = [
  { name = "Intel 471 Inc.", email = "integrations@intel471.com" }
]
license = "MIT"
readme = "README.md"
keywords = [
    "intel471",
    "verity471",
    "verity",
    "sdk",
    "api",
    "api-client",
    "threat-intelligence",
    "cti",
    "stix",
    "cybersecurity",
]

requires-python = ">=3.10"

classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14"
]

dependencies = [
  "urllib3>=2.1.0,<3.0.0",
  "python-dateutil>=2.8.2",
  "pydantic>=2",
  "typing-extensions>=4.7.1",
  "lazy-imports>=1,<2",
]

[project.optional-dependencies]
stix = [
  "PyYAML>=6.0.2",
  "stix2>=3.0.1,<4",
  "pycti>=6.9.0"
]

test = [
  "pytest>=7.2.1",
  "pytest-cov>=2.8.1"
]


[project.urls]
Repository = "https://github.com/intel471/verity471-python"


[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
